css/theme.css
/* ... */
.controlled-areas {
    vector-effect: non-scaling-stroke;
    stroke: red;
    stroke-width: 2;
    fill: none;
}
#voronoi-area {
    vector-effect: non-scaling-stroke;
    stroke: red;
    stroke-width: 2;
    fill: none;
}

.flow-gates {
    vector-effect: non-scaling-stroke;
    stroke: blue;
    stroke-width: 1;
    opacity: 0;
}

.ped-individual {
    vector-effect: non-scaling-stroke;
    stroke: black;
    stroke-width: 1;
}

.ped-trajectory {
    vector-effect: non-scaling-stroke;
    stroke: gray;
    stroke-width: 1;
    fill: none;
}
.the-flow-lines {
    vector-effect: non-scaling-stroke;
    stroke: gray;
    stroke-width: 1;
    fill: none;
}

.drawing_pannel {
    vector-effect: non-scaling-stroke;
    stroke: none;
    fill: none;
}

.voronoi-pre-circle {
    vector-effect: non-scaling-stroke;
    fill: black;
}

#viz {
    margin: 0;
    padding: 0px;
    #padding: -10px;
    #background-color: red;
}

#svgCont {
    padding: 0px;
    z-index: 1;
}

/* Chord Diagram */

#tooltip {
    color: white;
    opacity: .9;
    background: #333;
    padding: 5px;
    border: 1px solid lightgrey;
    border-radius: 5px;
    position: absolute;
    z-index: 10;
    visibility: hidden;
    white-space: nowrap;
    pointer-events: none;
}

#circle circle {
    fill: none;
    pointer-events: all;
}

.chordlabels {
    font-size: 15px;
    font-weight: bold;
}

path.group {
    fill-opacity: 0.8;
}

path.chord {
    fill-opacity: 0.8;
    stroke: #000000;
    stroke-width: 0.5px;
}

#circle:hover path.fade {
    display: none;
}

#containerForOD {
    max-width: 700px;
    margin-left:auto;
    margin-right:auto;
}

#viz_OD {
    text-align: center
}

/* Stats */

.graph {
    width: 100%;
    height: 0px;
}

.chordlabels {
    cursor: pointer;
}

/* Custom slider */

.slider {
    -webkit-appearance: none;
    width: 100%;
    height: 15px;
    border-radius: 5px;
    background: #9D8655;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #1D1B0D;
    cursor: pointer;
}

.form-check-input {
    background-color: #544D31 !important;
}

.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #1D1B0D;
    cursor: pointer;
}

#nbrBinsValue {
    font-weight: bold;
}

.sliderDiv {
    padding-right: 0
}

.sliderDisp {
    padding-left: 0
}

.subtitle {
    font-weight: bold;
}

.subsubtitle {
    font-weight: bold;
    font-size: 14px;

}

.dot {
    font-weight: bolder;
    font-size: 20px;
}

.download {
    background-color: black;
    border-color: black;
    text-align: center;
    color: white;
}

.btn-primary.download:hover {
    background: #F7F4EA;
    border-color: #1D1B0D;
    color: #1D1B0D;
}

/* d3 TIP */

.d3-tip {
    line-height: 1;
    padding: 6px;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 4px;
    font-size: 12px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
    box-sizing: border-box;
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: rgba(0, 0, 0, 0.8);
    content: "\25BC";
    position: absolute;
    text-align: center;
    pointer-events: none;
}

/* Style northward tooltips specifically */
.d3-tip.n:after {
    margin: -2px 0 0 0;
    top: 100%;
    left: 0;
    hideDelay: 0;
}

.bar:hover {
    opacity: 0.6 ;
}

.title_options {
    font-size: 25px;
    font-weight: bold;
}

.graph-debug {
    width: 100%;
    height: 100px;
    background-color: #0c5460;
}

.svg-container {
    display: block;
    align-items: center;
    position: relative;
    width: 100%;
    padding-bottom: 100%; /* aspect ratio */
    vertical-align: center;
    #overflow: hidden;
}
.svg-content-responsive {
    display: inline-block;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
}

.opt-graphs {
    box-sizing: content-box;
    padding: 10px;
    border: 2px solid #1D1B0D;
    background-color: #D8CC99;
    font-size: 12px;
}

.opt-graphs-buttons, .btn-opt, .input-group-text, #chord-group-name {
    font-size: 12px;
}

.btn {

}

.input-group-text {
    background-color: transparent;
    border: transparent;
    color: #262A2D;
}

.colStat, .statRow {
    margin: 0;
    padding: 0;
}

#statDiv {
    background: #dad2b3;
}

.middleVert{
    display: flex;
    align-items: center;
}

#chord-group-name {
    height: 100%;
}

.chordlabels {
    font-size: 18px;
}

#descInfra, #descTraj {
    margin-bottom: 0px;
}

.jumbotron, .card-header {
    background-color: #D8CC99
}

.card-body {
    background-color: #F7F4EA
}

.jumbotron {
    padding: 25px;
}

a {
    color: #544D31;
}

a:hover {
    color: red;
}

.blockquote {
    font-size: 14px;
}

blockquote p{ margin: 0 16px 16px; }
blockquote p:last-child{ margin-bottom: 0; }
blockquote footer{
    font-size: 0.7em;
    text-align:right;
    font-style:italic;
    margin:12px 20px 0;
}
blockquote footer:before{ content:"\2014 \00a0"; }

